# beep-beep-oss

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SETUP.md
.claude/: launch.json
.github/workflows/: ci.yml
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  ai.ts  api.ts  styles.css
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: ai.rs  lib.rs  main.rs  matrix.rs  panic_guard.rs  perf.rs
client/src/bindings/: Account.ts  AiAnswer.ts  AiProviderInfo.ts  AiProviderInput.ts  AiProviderKind.ts  ChatLine.ts  ReactionGroup.ts  ReplyPreview.ts  RestoreOutcome.ts  RoomSummary.ts  SearchHit.ts
client/src/components/: DegradedBanner.tsx  Icon.tsx  Logo.tsx  Rail.tsx  SyncBanner.tsx  TitleBar.tsx
client/src/components/calls/: CallsView.tsx
client/src/components/chats/: ChatList.tsx  RoomAvatar.tsx  RoomRow.tsx  SearchResults.tsx
client/src/components/conversation/: Composer.tsx  ConversationPane.tsx  MessageBubble.tsx  MessageImage.tsx  MessageList.tsx  TimelineErrorState.tsx
client/src/components/drawer/: InfoDrawer.tsx
client/src/components/modals/: NewChatModal.tsx
client/src/components/onboarding/: LinkWhatsApp.tsx  Onboarding.tsx
client/src/components/settings/: SettingsView.tsx
client/src/components/ui/: dialog.tsx  tooltip.tsx
client/src/hooks/: usePanicGuard.ts  useRooms.ts  useSession.ts  useSyncState.ts  useTimeline.ts
client/src/lib/: drafts.ts  format.ts  lru.ts
docs/: AGENT-SURFACE.md  ARCHITECTURE.md  DEPLOY.md  ROADMAP.md  RUNBOOK.md  SETTINGS.md  SYNC-HARDENING.md
docs/design/: Dispatch Android.dc.html  Dispatch Desktop.dc.html  Dispatch IOS.dc.html
docs/design/design-specifications-summary/: README.md
docs/design/design-specifications-summary/project/: .thumbnail  beep-beep-oss Client UI.dc.html
infra/: .env.example  Makefile  _postboot-dockerup.ps1  compress-state.ps1  docker-compose.yml  docker-up.ps1
infra/caddy/: Caddyfile.example
infra/postgres/: init-databases.sh
