[package]
name = "beep-beep"
version = "0.0.0"
description = "beep-beep-oss client"
edition = "2021"
rust-version = "1.93"

# The library is what mobile (iOS/Android) links against; the binary is desktop.
# Both call into `run()` in lib.rs — that's how one codebase targets all platforms.
[lib]
name = "beep_beep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Desktop notifications, fired from Rust on incoming messages (see matrix.rs);
# Rust-side use needs no webview capability grants.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# ⚠️ Pin the CURRENT version before building: `cargo add matrix-sdk`.
# The version below is indicative — the SDK moves fast. Features:
#   e2e-encryption → end-to-end encryption support
#   sqlite         → persist session + crypto keys on disk (fast restarts)
matrix-sdk = { version = "0.18", features = ["e2e-encryption", "sqlite", "bundled-sqlite"] }
# Simplified Sliding Sync engine (SyncService / RoomListService) — the "no-delay" sync.
matrix-sdk-ui = "0.18"

# The Timeline diff stream yields `imbl::Vector<Arc<TimelineItem>>` and a
# `Stream` of `VectorDiff`s; we name both to map items → ChatLines and to drive
# the diff-forwarding task. Pinned to the versions matrix-sdk-ui 0.18 already
# resolves (see Cargo.lock) so we share one copy, not a second incompatible one.
imbl = "6.1"
futures-util = "0.3"

# Generates TypeScript types from our Rust structs (keeps the boundary in sync).
ts-rs = "12"

# Base64-encodes avatar thumbnails into data: URLs for the webview (room_avatar).
base64 = "0.22"

# MIME type for send_attachment (media sending).
mime = "0.3"

# AI layer (Inbox Intelligence). One HTTP client serves every backend because
# AMD (vLLM/ROCm), Qwen Cloud (DashScope), DeepSeek and OpenAI all expose the
# SAME OpenAI-compatible API — so providers differ only by {base_url, model, key}.
# rustls-tls avoids a system OpenSSL dependency (matters for mobile + Windows).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
# Direct toast access on Windows (already in the tree via the notification
# plugin): the plugin strips the AppUserModelID when running from target/debug,
# which attributes dev toasts to "Windows PowerShell". We set the app id
# ourselves (see matrix.rs) after registering it in HKCU (see lib.rs).
notify-rust = "4"
winreg = "0.55"

[features]
# Tauri uses this to enable mobile-specific code paths.
default = []
