[package]
name = "beep-beep"
version = "0.0.0"
description = "Dooper — Beeper, but open-source (client)"
edition = "2021"
rust-version = "1.93"

# The library is what mobile (iOS/Android) links against; the binary is desktop.
# Both call into `run()` in lib.rs — that's how one codebase targets all platforms.
[lib]
name = "beep_beep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Desktop notifications, fired from Rust on incoming messages (see matrix.rs);
# Rust-side use needs no webview capability grants.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Pinned to the matrix-rust-sdk main rev that merged PR #6757 (the OrderTracker
# / linked_chunk "The chunk is not found" fix our failing test produced — see
# issue #5416). Move this pin forward deliberately; return to a crates.io
# version at the next SDK release that contains the fix. Features:
#   e2e-encryption → end-to-end encryption support
#   sqlite         → persist session + crypto keys on disk (fast restarts)
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "1c74383388c0c526b93c99eab8c0f022c69cfcf3", features = ["e2e-encryption", "sqlite", "bundled-sqlite"] }
# Simplified Sliding Sync engine (SyncService / RoomListService) — the "no-delay" sync.
matrix-sdk-ui = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "1c74383388c0c526b93c99eab8c0f022c69cfcf3" }

# The Timeline diff stream yields `imbl::Vector<Arc<TimelineItem>>` and a
# `Stream` of `VectorDiff`s; we name both to map items → ChatLines and to drive
# the diff-forwarding task. Pinned to the versions matrix-sdk-ui 0.18 already
# resolves (see Cargo.lock) so we share one copy, not a second incompatible one.
imbl = "6.1"
futures-util = "0.3"

# Generates TypeScript types from our Rust structs (keeps the boundary in sync).
ts-rs = "12"

# Base64-encodes avatar thumbnails into data: URLs for the webview (room_avatar).
base64 = "0.22"

# MIME type for send_attachment (media sending).
mime = "0.3"

# AI layer (Inbox Intelligence). One HTTP client serves every backend because
# AMD (vLLM/ROCm), Qwen Cloud (DashScope), DeepSeek and OpenAI all expose the
# SAME OpenAI-compatible API — so providers differ only by {base_url, model, key}.
# rustls-tls avoids a system OpenSSL dependency (matters for mobile + Windows).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
# Direct toast access on Windows (already in the tree via the notification
# plugin): the plugin strips the AppUserModelID when running from target/debug,
# which attributes dev toasts to "Windows PowerShell". We set the app id
# ourselves (see matrix.rs) after registering it in HKCU (see lib.rs).
notify-rust = "4"
winreg = "0.55"

[features]
# Tauri uses this to enable mobile-specific code paths.
default = []
